...
        app:layout_constraintTop_toTopOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/previousButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/button_text_size"
...
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/button_text_size"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/nextButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_button_text"
                android:textSize="@dimen/button_text_size"
                android:layout_alignParentRight="true"
...
